--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             <button type="reset">Effacer</button>
         </form>
 
-        <p><a href="file:///C:/Users/clarc/OneDrive/Desktop/Devoir_Dev/index.html">Retour à la page d'accueil</a></p>
+        <p><a href="https://clarcparoxysme.github.io/exercice-1/#">Retour à la page d'accueil</a></p>
     </body>
 </html>
